--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "nodemon": "^2.0.20",
     "pluralize": "^8.0.0",
     "sequelize": "^6.6.5",
-    "slack-block-builder": "^2.1.1",
-    "sqlite3": "^4.2.0"
+    "slack-block-builder": "^2.1.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
@@ -41,6 +40,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "jest": "^27.2.0",
-    "sequelize-cli": "^6.3.0"
+    "sequelize-cli": "^6.3.0",
+    "sqlite3": "^5.1.6"
   }
 }
