--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@slack/bolt": "^3.8.1",
     "dotenv": "^10.0.0",
     "eslint-plugin-jest": "^24.4.2",
+    "express": "^4.18.2",
     "luxon": "^1.28.1",
+    "mongodb": "^5.1.0",
     "nodemon": "^2.0.20",
     "pluralize": "^8.0.0",
     "sequelize": "^6.6.5",
